Adjustments after testing serialization
- Store the raw version string behind all ArtifactVersion and
VersionRange usage. Use it to write.

Signed-off-by: Chris Sanders <zidane@spongepowered.org>